--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -37,15 +37,7 @@
 - name: override nginx vhost
   template:
     src: drupal.conf.j2
-    dest: /etc/nginx/conf.d/drupal.conf
-  when: drupal_http_port
-  notify: dork.nginx reload
-
-- name: remove nginx vhost
-  file:
-    path: /etc/nginx/conf.d/drupal.conf
-    state: absent
-  when: not drupal_http_port
+    dest: /etc/nginx/conf.d/default.conf
   notify: dork.nginx reload
 
 # ======================================================================
